test/files/neg/predef-masking.check
predef-masking.scala:7: error: value + is not a member of type parameter T
  def f[T](x: T) = x + 5
                     ^
one error found
